[package]
name = "jira-issue-api"
description = "Personal library for interfacing with Jira issues"
version = "0.4.6"
edition = "2021"
authors = ["Steffen Baarsgaard <sbaarsgaard@gmail.com>"]
repository = "https://github.com/baarsgaard/jira-issue-api"
license-file = "./LICENSE"

[dependencies]
base64 = "0.22"
regex = { version = "1.8", features = ["std"], default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5.0"

[features]
default = []
cloud = []
data-center = []
