[package]
name = "jira-issue-api"
description = "Personal library for interfacing with Jira issues"
version = "0.7.0"
edition = "2024"
authors = ["Steffen Baarsgaard <sbaarsgaard@gmail.com>"]
repository = "https://github.com/baarsgaard/jira-issue-api"
license-file = "./LICENSE"

[dependencies]
base64 = "0.22"
regex = { version = "1.11", features = ["std"], default-features = false }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
